--- a/KTMKomuter/Views/KtmKomuter/Index.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Index.cshtml
@@ -7,6 +7,7 @@
     <h1>User List</h1>
     <p>
         @Html.ActionLink(" New User", "TrainTicket", null, null, new { @class = "bi bi-person-add btn btn-primary" })
+        @Html.ActionLink(" Report", "Report", null, null, new { @class = "bi bi-file-text btn btn-primary" })
     </p>
 
     @using (Html.BeginForm("SearchIndex", "KtmKomuter", FormMethod.Get))
@@ -112,7 +113,6 @@
                         @Html.ActionLink("", "Details", null, new { id = item.ViewId }, new { @class = "bi bi-card-text btn btn-sm btn-success", title = "Details" })
                         @Html.ActionLink("", "Edit", null, new { id = item.ViewId }, new { @class = "bi bi-pencil-square btn btn-sm btn-primary", title = "Edit" })
                         @Html.ActionLink("", "Delete", null, new { id = item.ViewId }, new { @class = "bi bi-trash3 btn btn-sm btn-danger", title = "Delete" })
-                        @Html.ActionLink("", "SendMail", null, new { id = item.ViewId }, new { @class = "bi bi-envelope btn btn-sm btn-info", title = "Send Mail" })
                     </td>
                 </tr>
             }
